# mytodo

./: .env  README.md  docker-compose.yml  openapi.yml
backend/: Cargo.toml
backend/entity/: Cargo.toml
backend/entity/src/: lib.rs  prelude.rs  todo.rs
backend/src/: main.rs
frontend/: package.json
