[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    ".",
    "entity",
    "migration",
]

[dependencies]
axum = "0.7.3"
dotenv = "0.15.0"
sea-orm = { version = "0.12.10", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros" ] }
entity = { path = "./entity" }
migration = { path = "./migration" } # depends on your needs
fern = "0.6.2"
log = "0.4.20"
humantime = "2.1.0"
clap = { version = "4.4.13", features = ["derive"] }
serde = "1.0.194"
tower = { version = "0.4.13", features = ["timeout"] }
tower-http = { version = "0.5.0", features = ["trace"] }
tracing-subscriber = "0.3.18"
uuid = { version = "1.6.1", features = ["v4"] }
tokio = { version = "1.35.1", features = ["full"] }
tracing = "0.1.40"
 